Refactor: fix intellij inspection issues and move commands